--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -32,3 +32,91 @@ body {
 .page-item.disabled .page-link {
     color: rgb(156 163 175 / var(--tw-text-opacity));
 }
+
+.cv-date {
+    margin: 2px 0 0 1px !important;
+    padding: 0 !important;
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 10px;
+    color: rgb(156 163 175);
+}
+
+.steps-bullet p {
+    margin-top: 1em;
+}
+
+.steps-bullet blockquote {
+    margin-top: 1em;
+}
+
+.steps-bullet h3:not(:first-child) {
+    margin-top: 2.8em;
+}
+
+.steps-bullet h4 {
+    margin-top: 1.5em;
+}
+
+.steps-bullet h3:before {
+    position: absolute;
+    height: 33px;
+    width: 33px;
+    border-width: 4px;
+    --tw-border-opacity: 1;
+    border-color: rgb(255 255 255 / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+:is(html[class~="dark"] .steps-bullet h3):before {
+    --tw-border-opacity: 1;
+    border-color: rgb(17 17 17 / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+}
+
+.steps-bullet h3:before {
+    border-radius: 9999px;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+    --tw-text-opacity: 1;
+    color: rgb(163 163 163 / var(--tw-text-opacity));
+    margin-top: 4px;
+    margin-left: -41px;
+    padding: 3px;
+    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='grey' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4' /%3E%3C/svg%3E");
+}
+
+.steps-bullet h4:before {
+    position: absolute;
+    height: 22px;
+    width: 22px;
+    border-width: 4px;
+    --tw-border-opacity: 1;
+    border-color: rgb(255 255 255 / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+:is(html[class~="dark"] .steps-bullet h4):before {
+    --tw-border-opacity: 1;
+    border-color: rgb(17 17 17 / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+}
+
+.steps-bullet h4:before {
+    border-radius: 9999px;
+    text-align: center;
+    text-indent: -1px;
+    font-size: 1rem;
+    font-weight: 400;
+    --tw-text-opacity: 1;
+    color: rgb(163 163 163 / var(--tw-text-opacity));
+    margin-top: 4px;
+    margin-left: -36px;
+    padding: 3px;
+    content: '';
+}
